scss/ionic.app.scss
/* ... */
.event-detail-view {
  @extend .card-detail-view;
}


/* Side Menu */

.side-menu {
  background: rgba(255, 255, 255, 1);
  .menu-item {
    background: transparent;
    border: none;
    a {
      position: relative;
      font-size: 15px;
      font-weight: 300;
      padding-left: 75px;
      background: none;
      font-family: $font-family-main;
      color: #afafaf;
      .menu-item__icon {
        position: absolute;
        font-size: 25px;
        color: #afafaf;
        left: 30px;
        top: 14px;
        &--map {
          left: 32px;
        }
        &--contacts {
          left: 28px;
        }
      }
      &:hover,
      &:focus {
        color: darken(white, 10%);
        color: white;
        opacity: 1;
      }
    }
    &__divider {
      border-bottom: 1px solid #5f326f;
      width: 85%;
      margin-left: 7.5%;
    }
  }
  .menu--item-active {
    a {
      color: #111 !important;
    }
    i {
      color: $purpleblue !important;
    }
    &:after {
      content: '';
      width: 3px;
      height: 31px;
      background: $purpleblue;
      position: absolute;
      top: 11px;
      left: 17px;
    }
  }
  .bar {
    height: 180px;
    width: 300px;
    background: none !important;
    img {
      width: 125px;
      height: 75px;
      top: 60px;
      margin-left: auto;
      margin-right: auto;
      left: 0;
      right: 0;
      position: absolute;
      z-index: 1;
      transform: rotate(-10deg);
    }
  }
  .scroll-content {
    top: 120px;
    background: none;
  }
  .bar-header {
    background: url('../img/eudc2017-bg-blur.jpg') !important;
    background-size: cover !important;
    position: relative;
    left: -7px;
    transform: rotate(10deg);
    top: -38px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.55);
    &:after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      width: 100%;
      height: 100%;
      background: linear-gradient(45deg, #6300f3, #4f1d9e) !important;
    }
  }
  .list {
    padding-top: 60px;
  }
}

// FOOTER FOR MENU
ion-toolbar {
  background: linear-gradient(45deg, #6300f3, #4f1d9e) !important;
  display: flex;
  transform: rotate(10deg);
  height: 80px;
  width: 320px;
  position: absolute;
  right: 0;
  bottom: -50px;
}

.about .content {
  h2,
  h3,
  h4,
  p,
  li {
    color: rgba(255, 255, 255, 1);
  }
  h2 {
    margin: 14px 0 18px;
  }
  ul {
    list-style-type: none;
    margin-top: 4px;
    li {
      margin: 7px 7px 7px 35px;
    }
  }
  .fit-img {
    width: calc(100% + 20px);
    margin: 5px 0 15px -10px;
  }
  .final {
    padding-bottom: 28px;
  }
}


/* Navigation Bar */

.bar-stable {
  .title {
    color: #fff !important;
  }
  .bar-header {
    background: linear-gradient(top, #452aa5, #2f158a) !important;
    box-shadow: 2px 2px 8px rgba(0, 0, 0, .60);
    text-transform: uppercase;
    letter-spacing: 0.05em;
  }
}


/* Pull Down To Refresh */

.spinner-ios,
.spinner-ios-small {
  stroke: rgba(255, 255, 255, 0.9) !important;
}

.scroll-refresher .ionic-refresher-content,
.contacts p {
  color: rgba(255, 255, 255, 0.9) !important;
  font-weight: 100;
}

.padding-div {
  padding-top: 10px;
  padding-bottom: 10px;
}

.contacts a,
.about .content a {
  color: #9476fd;
  text-decoration: none;
}

label.item.item-input {
  background: transparent;
  border-color: $purpleblue;
  border-width: 0px 0px 1.5px 0px !important;
  max-width: 300px;
  height: 150px;
  margin: 0 auto;
  textarea {
    background-color: rgba(0, 0, 0, 0);
    color: white;
  }
}

.btn-full-half {
  width: 50% !important;
  margin: 20px auto 10px !important;
}

.contacts {
  img {
    border-radius: 50%;
    object-fit: cover;
    width: 100px;
    height: 100px;
  }
}

.contacts-social--container {
  display: flex;
  justify-content: center;
  margin-top: 100px;
}

.contacts--icon {
  color: white;
  font-size: 33px;
  padding: 30px;
  background: $purpleblue;
  width: 44px;
  height: 44px;
  border-radius: 50%;
  margin: 20px;
  position: relative;
  display: block;
  &:before {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}

h3,
h4 {
  color: #fff !important;
}

.content--separator-line {
  @include content--separator-line;
}

.content--separator-line-xs {
  @include content--separator-line;
  width: 25px;
  height: 1.5px;
}

.custom-button {
  background-color: $purpleblue !important;
  color: #fff !important;
  text-transform: uppercase;
  letter-spacing: 4px;
  opacity: 1;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

textarea {
  resize: none;
}

.about-points {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  i {
    margin: 40px;
    &:after {
      content: '14-17 August';
      position: absolute;
      width: 130px;
      height: 50px;
      font-size: 14px;
      top: 70px;
      right: -40px;
      text-align: center;
    }
  }
  .ion-lightbulb:after {
    content: 'TUT Debate Society';
  }
  .ion-briefcase:after {
    content: 'Tallinn University of Technology';
  }
  .ion-person:after {
    content: '280 participants';
  }
  .ion-power:after {
    content: 'Grand Final, 19th August';
  }
}

.about--content-paragraph_container {
  //background: red !important;
  padding: 20px;
  margin: 60px auto;
  .pragraph {
    margin: 60px auto;
    color: #ccc !important;
  }
}

// Include all of Ionic
@import "../www/lib/ionic/scss/ionic";

